# RoboticsExp

./: README.md
src/: CMakeLists.txt  ConsoleApplication1.cpp  SystemParams.json  acctmngsys.hpp  brake.txt  glbvar.hpp  hash.hpp  interact.hpp  main.cpp  stfcont.hpp  stfinfo.hpp  stfprof.hpp  stfslry.hpp
src/DataPoints/: dataSaveLife1.txt  dataSaveLife2.txt
src/DataPoints/segments/: A1P1Safe_2_PBSafe.txt  A1P1_2_A1P1Safe.txt  PBSafe_2_A1P1Safe.txt  PBSafe_2_PB.txt  PB_2_PBSafe.txt
src/files/: cont.txt  info.txt  prof.txt  slry.txt  slryAccts.txt
src/includes/: ConsoleApplication1.cpp  HLrobotconfig.cpp  HLrobotconfig.h  MotionPlan.cpp  MotionPlan.h  PointsCoordinates.h  RobotCmd.cpp  RobotCmd.h  acctmngsys.hpp  custcls.hpp  custcnst.hpp  data.txt  dataPlanInCartesian.txt  dataPlanInJointSpace.txt  dataPos.txt  hash.hpp  interact.hpp  main.cpp  palletize.hpp  stfprof.hpp
src/oldIncludes/: custcls.hpp  custtype.hpp  main.cpp
